# magicode

./: .gitignore
experiments/: 001_test_case_generation.ipynb  002_evaluation.ipynb  01_base_benchmark.ipynb  02_base_benchmark-Copy1.ipynb  03_dutch_flag_benchmark.ipynb  04_pivot_bias_benchmark.ipynb  plotting.py
experiments/.ipynb_checkpoints/: .gitignore-checkpoint  002_evaluation-checkpoint.ipynb  01_base_benchmark-checkpoint.ipynb  01_test_case_generation-checkpoint.ipynb  02_base_benchmark-Copy1-checkpoint.ipynb  04_pivot_bias_benchmark-checkpoint.ipynb  tarea6-checkpoint.ipynb
presentation/: informe.aux  informe.dvi  informe.fdb_latexmk  informe.fls  informe.nav  informe.out  informe.ps  informe.snm  informe.tex  informe.toc  spanishAlgorithmic.tex  utalca.eps  utalcaDoc.cls
program/base_benchmark/: CMakeLists.txt  README.md  flags.h  main  main.cpp  main.cpp.bkp  main_prototype
program/base_benchmark/src/: BareBoneIIQS.cpp  BareBoneIIQS.h  BareBoneIQS.cpp  BareBoneIQS.h  IIQS.cpp  IIQS.h  IQS.cpp  IQS.h  IncrementalSorting.h  rIIQS.cpp  rIIQS.h  snapshot.h
program/base_benchmark/test_data/: input.ascii  output.ascii
program/basic_accelerator/: main.c
report/: iccmemoria.cls  memoria.aux  memoria.bbl  memoria.bcf  memoria.blg  memoria.fdb_latexmk  memoria.fls  memoria.lof  memoria.lot  memoria.run.xml  memoria.tex  memoria.toc  refs.bib  utalca1.eps  utalca2.eps
report/fragments/00_base/: index.tex
report/fragments/01_introduction/: index.tex
report/fragments/02_background/: 01_sorting_algorithms.tex  02_incremental_sorting.tex  04_software.tex  (+2 more)
(+19 files in other folders)
